home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      ## not necessary for single-node servers
      #nodeSelector:
      #  kubernetes.io/hostname: your-node-hostname  # The node where the USB stick is
http:
  use_x_forwarded_for: true
  trusted_proxies:
    - 10.42.0.0/24
EOF
              fi
          volumeMounts:
            - name: config
              mountPath: /config
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:latest
          securityContext:
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /config
            - name: usb
              mountPath: /dev/ttyACM0
          ports:
            - containerPort: 8123
              name: web
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: usb
          hostPath:
            path: /dev/ttyACM0
            type: CharDevice
